[fix] Update code to remove deprecated methods